--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
     "angular": ">=1 <2"
   },
   "devDependencies": {
-    "angular-mocks": ">=1 <2",
-    "iban": "~0.0.5"
+    "angular-mocks": ">=1 <2"
   }
 }
